force-app/main/default/objects/MTDT_DepDemo__c/MTDT_DepDemo__c.object-meta.xml
<CustomObject>
    <label>MTDT Dep Demo</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MTDT Dep Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>